--- a/FoosballApi/FoosballApi.fsproj
+++ b/FoosballApi/FoosballApi.fsproj
@@ -1,18 +1,53 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	<TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Common\AppSettings.fs" />
     <Compile Include="Domain\Team.fs" />
+    <Compile Include="Domain\GameEventType.fs" />
     <Compile Include="Domain\GameScore.fs" />
     <Compile Include="Domain\GameEvent.fs" />
     <Compile Include="Domain\Game.fs" />
-    <Compile Include="WeatherForecast.fs" />
-    <Compile Include="Controllers/WeatherForecastController.fs" />
+    <Compile Include="DataAccess\IGameQueryRepository.fs" />
+    <Compile Include="DataAccess\IGameCommandRepository.fs" />
+    <Compile Include="DataAccess\GameRepository.fs" />
+    <Compile Include="Application\Model\HomeScoresCommandDto.fs" />
+    <Compile Include="Application\Model\AwayScoresCommandDto.fs" />
+    <Compile Include="Application\Mappers\TeamMapper.fs" />
+    <Compile Include="Application\Model\GameStartCommandDto.fs" />
+    <Compile Include="Application\Model\GameListDto.fs" />
+    <Compile Include="Application\Model\GameDto.fs" />
+    <Compile Include="Application\Mappers\GameScoreMapper.fs" />
+    <Compile Include="Application\Mappers\GameEventMapper.fs" />
+    <Compile Include="Application\Mappers\GameMapper.fs" />
+    <Compile Include="Application\Service\IGameAppService.fs" />
+    <Compile Include="Application\Service\GameAppService.fs" />
+    <Compile Include="Controllers\GameController.fs" />
+    <Compile Include="Tests\Domain\TeamTests.fs" />
+    <Compile Include="Tests\Domain\GameScoreTests.fs" />
+    <Compile Include="Tests\Domain\GameEventTests.fs" />
+    <Compile Include="Tests\Domain\GameTests.fs" />
     <Compile Include="Startup.fs" />
     <Compile Include="Program.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FsUnit.xUnit" Version="4.0.7" />
+    <PackageReference Include="LiteDB.FSharp" Version="2.16.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
